refactor: improve code quality and javadoc across the codebase