@@ -4,10 +4,9 @@ import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotNull;
-import lombok.Data;
-import lombok.EqualsAndHashCode;
+import lombok.Getter;
 import lombok.NoArgsConstructor;
-import lombok.ToString;
+import lombok.Setter;
 import nl.kmartin.dartsmatcherapi.features.basematch.model.BaseMatch;
 import nl.kmartin.dartsmatcherapi.features.basematch.model.MatchStatus;
 import nl.kmartin.dartsmatcherapi.features.basematch.model.MatchType;
@@ -19,16 +18,23 @@ import org.springframework.data.annotation.TypeAlias;
 import org.springframework.data.mongodb.core.mapping.Document;
 
 import java.time.Instant;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.NavigableMap;
+import java.util.TreeMap;
 import java.util.stream.Collectors;
 
-@Data
+/**
+ * Represents an X01 match, including its settings, ordered sets, progress and standings.
+ */
+@Getter
+@Setter
 @NoArgsConstructor
-@EqualsAndHashCode(callSuper = true)
-@ToString(callSuper = true)
 @Document(collection = "x01_matches")
 @TypeAlias("X01Match")
 public class X01Match extends BaseMatch<X01MatchPlayer> {
+
     @NotNull
     @Valid
     private X01MatchSettings matchSettings;
@@ -42,45 +48,84 @@ public class X01Match extends BaseMatch<X01MatchPlayer> {
     @Valid
     private LinkedHashMap<ObjectId, X01StandingsEntry> standings = new LinkedHashMap<>();
 
-    public X01Match(ObjectId id, Integer version, Integer publishedVersion, Instant startDate, Instant endDate, MatchStatus matchStatus,
-                    ArrayList<X01MatchPlayer> players, MatchType matchType, X01MatchSettings matchSettings,
-                    NavigableMap<Integer, X01Set> sets, X01MatchProgress matchProgress, LinkedHashMap<ObjectId, X01StandingsEntry> standings) {
-        super(id, version, publishedVersion, startDate, endDate, matchStatus, players, matchType);
+    public X01Match(
+            ObjectId id,
+            Integer version,
+            int broadcastVersion,
+            Instant startDate,
+            Instant endDate,
+            MatchStatus matchStatus,
+            ArrayList<X01MatchPlayer> players,
+            MatchType matchType,
+            X01MatchSettings matchSettings,
+            NavigableMap<Integer, X01Set> sets,
+            X01MatchProgress matchProgress,
+            LinkedHashMap<ObjectId, X01StandingsEntry> standings
+    ) {
+        super(id, version, broadcastVersion, startDate, endDate, matchStatus, players, matchType);
         this.matchSettings = matchSettings;
         this.setSets(sets);
         this.matchProgress = matchProgress;
         this.setStandings(standings);
     }
 
+    /**
+     * Gets the sets keyed by set number in chronological order.
+     *
+     * @return the ordered sets
+     */
     @JsonIgnore
     public @Valid NavigableMap<Integer, X01Set> getSets() {
         return sets;
     }
 
+    /**
+     * Replaces the ordered sets.
+     *
+     * @param sets the sets, or null to use an empty map
+     */
     public void setSets(@Valid NavigableMap<Integer, X01Set> sets) {
         this.sets = sets != null ? sets : new TreeMap<>();
     }
 
+    /**
+     * Replaces the match standings.
+     *
+     * @param standings the standings, or null to use an empty map
+     */
     public void setStandings(@Valid LinkedHashMap<ObjectId, X01StandingsEntry> standings) {
         this.standings = standings != null ? standings : new LinkedHashMap<>();
     }
 
-    // Serialize sets as a list because JSON objects don't guarantee key order.
+    /**
+     * Serializes the ordered sets as a list to preserve their chronological order.
+     *
+     * @return the sets as ordered entries
+     */
     @JsonProperty("sets")
     public List<X01SetEntry> getSetEntries() {
         return sets.entrySet().stream()
                 .map(X01SetEntry::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // Deserialize sets from a list to a NavigableMap to guarantee key order.
+    /**
+     * Deserializes set entries into a map ordered by set number.
+     *
+     * @param entries the serialized set entries
+     */
     @JsonProperty("sets")
     public void setSetEntries(List<X01SetEntry> entries) {
-        this.sets = entries.stream()
+        if (entries == null) {
+            sets = new TreeMap<>();
+            return;
+        }
+
+        sets = entries.stream()
                 .collect(Collectors.toMap(
                         X01SetEntry::setNumber,
                         X01SetEntry::set,
-                        (oldVal, newVal) -> newVal,
+                        (oldValue, newValue) -> newValue,
                         TreeMap::new
                 ));
     }
