@@ -1,21 +1,31 @@
 package nl.kmartin.dartsmatcherapi.features.x01.x01standings.service;
 
 import nl.kmartin.dartsmatcherapi.features.basematch.model.ResultType;
-import nl.kmartin.dartsmatcherapi.features.x01.x01leg.model.X01LegEntry;
+import nl.kmartin.dartsmatcherapi.features.x01.x01leg.model.X01Leg;
 import nl.kmartin.dartsmatcherapi.features.x01.x01match.model.X01ClearByTwoRule;
 import nl.kmartin.dartsmatcherapi.features.x01.x01match.model.X01Match;
 import nl.kmartin.dartsmatcherapi.features.x01.x01match.model.X01MatchPlayer;
 import nl.kmartin.dartsmatcherapi.features.x01.x01match.service.IX01MatchProgressService;
 import nl.kmartin.dartsmatcherapi.features.x01.x01rules.service.IX01RulesService;
+import nl.kmartin.dartsmatcherapi.features.x01.x01set.model.X01Set;
 import nl.kmartin.dartsmatcherapi.features.x01.x01set.model.X01SetEntry;
 import nl.kmartin.dartsmatcherapi.features.x01.x01standings.model.X01StandingsEntry;
 import org.bson.types.ObjectId;
 import org.springframework.stereotype.Service;
 import org.springframework.util.CollectionUtils;
 
-import java.util.*;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.TreeMap;
 import java.util.stream.Collectors;
 
+/**
+ * Rebuilds X01 match standings and determines winners from grouped win counts.
+ *
+ * Match standings contain cumulative set wins and leg wins for the current or final set.
+ */
 @Service
 public class X01StandingsServiceImpl implements IX01StandingsService {
 
@@ -28,139 +38,153 @@ public class X01StandingsServiceImpl implements IX01StandingsService {
     }
 
     /**
-     * Updates the match standings for a match.
+     * Rebuilds the standings from the processed match history.
      *
-     * @param match {@link X01Match} The match for which the standings need to be updated.
+     * Set wins are accumulated across all sets, while leg wins are taken from the current set or
+     * the final set when the match is concluded.
+     *
+     * @param match the match whose standings should be rebuilt
      */
     @Override
     public void updateMatchStandings(X01Match match) {
         if (match == null) return;
 
-        // Get the current set or the last set if the match is concluded.
-        Optional<X01SetEntry> currentSet = matchProgressService.getCurrentSet(match)
-                .or(() -> Optional.ofNullable(match.getSets().lastEntry())
-                        .map(X01SetEntry::new));
+        // Use the current set for leg standings, or the final set when the match is concluded.
+        Integer currentOrFinalSetNumber = matchProgressService.getCurrentSet(match)
+                .map(X01SetEntry::setNumber)
+                .orElseGet(() -> match.getSets().isEmpty() ? null : match.getSets().lastKey());
 
-        // Create the initial standings map with a value for each player set to 0 wins.
+        // Start with an empty standings entry for every player.
         LinkedHashMap<ObjectId, X01StandingsEntry> matchStandings = createInitialStandings(match.getPlayers());
 
-        // Iterate through the sets and update the legsWonInSet and setsWon counts for the set/leg winners.
-        match.getSets().entrySet().stream().map(X01SetEntry::new).forEach(setEntry -> {
-            // For the current set update the legsWonInSet counts.
-            currentSet.ifPresent(currentSetEntry -> {
-                if (currentSetEntry.setNumber() == setEntry.setNumber())
-                    updateStandingsWithLegWinners(currentSetEntry, matchStandings);
-            });
+        // Rebuild standings from the processed set history.
+        for (Map.Entry<Integer, X01Set> setEntry : match.getSets().entrySet()) {
+            X01SetEntry entry = new X01SetEntry(setEntry);
 
-            // Update the setsWon counts
-            updateStandingsWithSetWinners(setEntry, matchStandings);
-        });
+            // Only the current or final set contributes to the leg standings.
+            if (Objects.equals(currentOrFinalSetNumber, entry.setNumber())) {
+                updateStandingsWithLegWinners(entry, matchStandings);
+            }
 
-        // Replace the match standings with the newly created standings.
+            // Set wins are cumulative across the entire match.
+            updateStandingsWithSetWinners(entry, matchStandings);
+        }
+
+        // Replace the stored standings with the rebuilt result.
         match.setStandings(matchStandings);
     }
 
     /**
-     * Determines the winners from the current standings based on the number of legs/sets played,
-     * the target number to win (bestOf), and the clear-by-two rule.
+     * Determines whether the leaders in the standings are confirmed winners.
      *
-     * @param standings      TreeMap with key the number of legs/sets won, and value a list of ObjectIds of players with that score.
-     * @param played         The number of legs or sets played so far.
-     * @param bestOf         the best of setting.
-     * @param clearByTwoRule The clear-by-two rule settings.
-     * @return A list of ObjectIds representing the winner(s), or an empty list if no winner yet.
+     * @param standings      players grouped by their number of wins
+     * @param played         the number of legs or sets already played
+     * @param bestOf         the configured best-of value
+     * @param clearByTwoRule the clear-by-two rule to apply
+     * @return the confirmed winners, or an empty list when the result is not yet decided
      */
     @Override
     public List<ObjectId> determineWinners(TreeMap<Integer, List<ObjectId>> standings, int played, int bestOf, X01ClearByTwoRule clearByTwoRule) {
-        // Step 1: Empty standings means no winners.
-        if (CollectionUtils.isEmpty(standings)) return Collections.emptyList();
+        // Step 1: Empty standings means there can be no winner.
+        if (CollectionUtils.isEmpty(standings)) return List.of();
 
-        // Step 2: Find the most legs won and second most legs won and calculate the difference.
+        // Step 2: Get the leader and runner-up scores and calculate the current lead.
         int leaderScore = standings.lastKey();
         Integer runnerUpScore = standings.lowerKey(leaderScore);
         int diff = leaderScore - (runnerUpScore != null ? runnerUpScore : leaderScore);
         int bestOfRemaining = bestOf - played;
 
-        // Step 3: For single player match continue until no remaining
+        // Step 3: A single-player match is only concluded once all configured legs or sets have been played.
         if (rulesService.isSinglePlayerMatch(standings, leaderScore, runnerUpScore)) {
-            if (bestOfRemaining == 0) return new ArrayList<>(standings.get(leaderScore));
-            else return Collections.emptyList();
+            return bestOfRemaining == 0 ? List.copyOf(standings.get(leaderScore)) : List.of();
         }
 
-        // Step 4: If leaderScore cannot be caught up by the remaining best of then everyone in the leaderScore group is a winner.
+        // Step 4: Return the leaders when the current result can no longer be overturned.
         if (rulesService.isWinnerConfirmed(diff, bestOfRemaining, played, bestOf, clearByTwoRule)) {
-            return new ArrayList<>(standings.get(leaderScore));
+            return List.copyOf(standings.get(leaderScore));
         }
 
-        // Step 5: No winners so return the empty winners list.
-        return Collections.emptyList();
+        // Step 5: The result is not yet decided.
+        return List.of();
     }
 
     /**
-     * Creates a standings map with an entry for each player with 0 sets/leg wins.
+     * Groups players by their number of wins.
      *
-     * @param players The players that should be in the standings
-     * @return A linked hashmap keyed by player id and with a value of an empty {@link X01StandingsEntry}
+     * @param winsPerPlayer the number of wins for each player
+     * @return a sorted map keyed by win count with the players sharing that count
+     */
+    @Override
+    public TreeMap<Integer, List<ObjectId>> groupByWinCounts(Map<ObjectId, Long> winsPerPlayer) {
+        if (winsPerPlayer == null || winsPerPlayer.isEmpty()) return new TreeMap<>();
+
+        return winsPerPlayer.entrySet()
+                .stream()
+                .collect(Collectors.groupingBy(
+                        entry -> entry.getValue().intValue(),
+                        TreeMap::new,
+                        Collectors.mapping(Map.Entry::getKey, Collectors.toList())
+                ));
+    }
+
+    /**
+     * Creates empty standings for all match players.
+     *
+     * @param players the players to include
+     * @return standings initialized with zero set and leg wins
      */
     private LinkedHashMap<ObjectId, X01StandingsEntry> createInitialStandings(List<X01MatchPlayer> players) {
         return players.stream()
                 .collect(Collectors.toMap(
                         X01MatchPlayer::getPlayerId,
                         player -> new X01StandingsEntry(0, 0),
-                        (oldVal, newVal) -> oldVal,
+                        (oldValue, newValue) -> oldValue,
                         LinkedHashMap::new
                 ));
     }
 
     /**
-     * Updates the standings for all players that have won legs in a set.
+     * Adds the completed leg wins from a set to the match standings.
      *
-     * @param currentSetEntry The set containing the legs to update the standings with.
-     * @param matchStandings  The standings that need to be updated.
+     * @param currentSetEntry the set whose leg wins should be counted
+     * @param matchStandings  the standings to update
      */
     private void updateStandingsWithLegWinners(X01SetEntry currentSetEntry, LinkedHashMap<ObjectId, X01StandingsEntry> matchStandings) {
-        currentSetEntry.set().getLegs().entrySet().stream().map(X01LegEntry::new).forEach(legEntry -> {
-            ObjectId legWinner = legEntry.leg().getWinner();
-            if (legWinner != null && matchStandings.containsKey(legWinner)) {
-                X01StandingsEntry playerStandings = matchStandings.get(legWinner);
-                playerStandings.setLegsWonInCurrentSet(playerStandings.getLegsWonInCurrentSet() + 1);
-            }
-        });
-    }
+        for (X01Leg leg : currentSetEntry.set().getLegs().values()) {
+            // Get the leg winner; unfinished legs can be skipped.
+            ObjectId legWinner = leg.getWinner();
+            if (legWinner == null) continue;
 
-    /**
-     * Updates the standings for all players that have won or drawn a set.
-     *
-     * @param setEntry       The set containing the result to update the standings with.
-     * @param matchStandings The standings that need to be updated.
-     */
-    private void updateStandingsWithSetWinners(X01SetEntry setEntry, LinkedHashMap<ObjectId, X01StandingsEntry> matchStandings) {
-        if (!CollectionUtils.isEmpty(setEntry.set().getResult())) {
-            setEntry.set().getResult().entrySet().stream().filter(resultEntry ->
-                    (resultEntry.getValue().equals(ResultType.WIN) || resultEntry.getValue().equals(ResultType.DRAW) &&
-                            matchStandings.containsKey(resultEntry.getKey()))).forEach(resultEntry -> {
-                X01StandingsEntry playerStandings = matchStandings.get(resultEntry.getKey());
-                playerStandings.setSetsWon(playerStandings.getSetsWon() + 1);
-            });
+            // Get the standings for the leg winner; if absent, the leg can be skipped.
+            X01StandingsEntry playerStandings = matchStandings.get(legWinner);
+            if (playerStandings == null) continue;
+
+            // Increment the player's leg wins in the current set.
+            playerStandings.setLegsWonInCurrentSet(playerStandings.getLegsWonInCurrentSet() + 1);
         }
     }
 
     /**
-     * Groups players by their win counts into a TreeMap:
-     * - Key is the number of wins
-     * - Value is the list of player Ids who have that number of wins.
+     * Adds set wins and drawn-set results to the match standings.
      *
-     * @param winsPerPlayer a map of player IDs to their number of wins
-     * @return a TreeMap where each key is a win count and the value is a list of player IDs with that win count
+     * @param setEntry       the set whose result should be counted
+     * @param matchStandings the standings to update
      */
-    @Override
-    public TreeMap<Integer, List<ObjectId>> groupByWinCounts(Map<ObjectId, Long> winsPerPlayer) {
-        return winsPerPlayer.entrySet().stream()
-                .collect(Collectors.groupingBy(
-                        e -> e.getValue().intValue(), // classifier: group by win count
-                        TreeMap::new, // supplier: group into a sorted TreeMap
-                        Collectors.mapping(Map.Entry::getKey, Collectors.toList()) // downstream: map entries to player IDs list
-                ));
-    }
+    private void updateStandingsWithSetWinners(X01SetEntry setEntry, LinkedHashMap<ObjectId, X01StandingsEntry> matchStandings) {
+        if (CollectionUtils.isEmpty(setEntry.set().getResult())) return;
 
+        for (Map.Entry<ObjectId, ResultType> resultEntry : setEntry.set().getResult().entrySet()) {
+            ResultType result = resultEntry.getValue();
+
+            // Both winners and players sharing a drawn set receive one set win.
+            if (result != ResultType.WIN && result != ResultType.DRAW) continue;
+
+            // Get the standings for the player; if absent, the result can be skipped.
+            X01StandingsEntry playerStandings = matchStandings.get(resultEntry.getKey());
+            if (playerStandings == null) continue;
+
+            // Increment the player's sets won.
+            playerStandings.setSetsWon(playerStandings.getSetsWon() + 1);
+        }
+    }
 }
